manifest/objects/LVGO__Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LVGO__StageName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Executive Approval</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Key Contact Departure/Leadership Change</fullName>
                </value>
                <value>
                    <fullName>Company Acquired</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Other Competing Priorities</fullName>
                </value>
                <value>
                    <fullName>Rebate Issues</fullName>
                </value>
                <value>
                    <fullName>Included in FI or ASO Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other (please specify in the opportunity update field)</label>
                </value>
                <value>
                    <fullName>Couldn&apos;t make a decision</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Understand ROI</fullName>
                </value>
                <value>
                    <fullName>Lack of Understanding</fullName>
                </value>
                <value>
                    <fullName>No Budget - decided not to pursue</fullName>
                </value>
                <value>
                    <fullName>No Strategic Fit</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Teladoc Channel Partner Won It - Not Direct</fullName>
                </value>
                <value>
                    <fullName>Timing Wrong</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Transferred to ITH</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__MSA__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>MSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Marketing_Approach_Details__c</fullName>
        <inlineHelpText>Provide key details around access to marketing, like if the client is committing to all marketing channels, thus will get the lapse clause? Are there any limitations we need to know of?</inlineHelpText>
        <label>Marketing Approach Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Marketing_Channels__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>What marketing channels are available</inlineHelpText>
        <label>Marketing Channels</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Matching_Population_Type__c</fullName>
        <formula>IF(LVGO__Contract__c = &quot;&quot;, 
			TRUE,
		 IF( TEXT(LVGO__Population_Type__c) =  TEXT(LVGO__Contract__r.LVGO__Population_Type__c) , 
						 TRUE, 
						 IF(ISBLANK(TEXT(LVGO__Population_Type__c)) || ISBLANK(TEXT(LVGO__Contract__r.LVGO__Population_Type__c)), 
										TRUE, 
										FALSE
									)
					  )
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching Population Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Microsoft_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Migrated_myStrength_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated myStrength Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__Monthly_Recurring_Revenue_MRR__c</fullName>
        <formula>(LVGO__Livongo_for_Diabetes_PwDs__c * LVGO__Livongo_for_Diabetes_PPPM__c * 0.25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total # of PwDs covered by contract * $PPPM * 25%</inlineHelpText>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Net_ARR__c</fullName>
        <description>Sum of all related Program ARRs</description>
        <label>Net ARR</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Program_ARR_Copy__c</summarizedField>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Net_TCV__c</fullName>
        <description>Sum of all related Net Program TCVs
Not Used - JENGA-1540</description>
        <label>Net TCV</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__Net_Program_TCV_Copy__c</summarizedField>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__NextStep__c</fullName>
        <label>NextStep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Non_Standard_Agreements__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>Non-Standard Agreements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Notes_for_Contacts__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>Please provide background on the important contacts in the Sales process and any information that can help facilitate the transition to a relationship with the CI (ex: what are there communication preferences, name pronunciation, meeting preferences)</inlineHelpText>
        <label>Notes for Contacts</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Notes_for_Contract_Executed_Dates__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>Notes for Contract Executed Dates</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Octiv_Template__c</fullName>
        <inlineHelpText>Select the template you want to use, then save the opportunity. After saving, hit the &quot;New Document&quot; button above</inlineHelpText>
        <label>Octiv Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BCBS MI Business Case v1.1</fullName>
                </value>
                <value>
                    <fullName>BCBS MI Business Case v1.2 w LauraWetli Signature</fullName>
                </value>
                <value>
                    <fullName>BCBS Michigan - Business Case DM &amp; BH</fullName>
                </value>
                <value>
                    <fullName>BCBS Michigan - Business Case - DM Only</fullName>
                </value>
                <value>
                    <fullName>BH Only Template</fullName>
                </value>
                <value>
                    <fullName>Proposal Template</fullName>
                    <label>Diabetes + HTN + WM/DP + BH Proposal</label>
                </value>
                <value>
                    <fullName>Diabetes Only</fullName>
                    <label>Diabetes Only Proposal</label>
                </value>
                <value>
                    <fullName>HTN Only Proposal</fullName>
                </value>
                <value>
                    <fullName>Whole Person Proposal</fullName>
                </value>
                <value>
                    <fullName>DPP Only Template</fullName>
                    <label>WM/DP Only Template</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Opp_Migrate_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opp Migrate Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Opp_Owner_Role__c</fullName>
        <formula>LVGO__Owner__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opp_Rev_Flag_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opp Rev Flag Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Opp_Rev_Synergy_Flag__c</fullName>
        <label>Opp Rev Synergy Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross-sell LV Products into TD</fullName>
                </value>
                <value>
                    <fullName>Cross-sell TD Products into LV</fullName>
                </value>
                <value>
                    <fullName>Combined TD/LV Solution (MH)</fullName>
                </value>
                <value>
                    <fullName>Cross-sell LV Products into TD + Combined TD/LV Solution (MH)</fullName>
                </value>
                <value>
                    <fullName>Cross-sell TD Products into LV + Combined TD/LV Solution (MH)</fullName>
                </value>
                <value>
                    <fullName>No Synergy</fullName>
                </value>
                <value>
                    <fullName>Net New Client (All Solutions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Covered_Lives__c</fullName>
        <label>Opportunity Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_ID_Long__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <label>Opportunity ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Next_Step__c</fullName>
        <label>Opportunity Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Update_Next_Step__c</fullName>
        <label>Opportunity Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Opportunity_Update__c</fullName>
        <label>Opportunity Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Original_Contract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is related only to Contract Path Change opportunities and is required for commissions to be tied between the original sale, the original contract, and the updated contract via a new path.</description>
        <inlineHelpText>This field is related only to Contract Path Change opportunities and is required for commissions to be tied between the original sale, the original contract, and the updated contract via a new path.</inlineHelpText>
        <label>Original Contract</label>
        <referenceTo>LVGO__Contract__c</referenceTo>
        <relationshipLabel>Opportunities (Original Contract)</relationshipLabel>
        <relationshipName>LVGO_Opportunities_Original_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Other_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LVGO_Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesOwned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__PGs__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>PGs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__PO_WholePerson__c</fullName>
        <label>PO#_WholePerson</label>
        <summarizedField>LVGO__OpportunityLineItem__c.LVGO__PO_WholePerson__c</summarizedField>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>LVGO__Opportunity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>LVGO_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Population_Type__c</fullName>
        <description>To be completed for clients on HSS contracts only or if your client is non-HSS but launching as downmarket.</description>
        <inlineHelpText>To be completed for clients on HSS contracts only or if your client is non-HSS but launching as downmarket.</inlineHelpText>
        <label>Population Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASO Opt-In</fullName>
                </value>
                <value>
                    <fullName>ASO Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Commercial ASO - Opt In</fullName>
                </value>
                <value>
                    <fullName>Commercial ASO - Opt Out</fullName>
                </value>
                <value>
                    <fullName>Commercial FI</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Dual Eligibles</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
                <value>
                    <fullName>Managed Medicaid</fullName>
                </value>
                <value>
                    <fullName>Marketplace Exchange</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Other Government</fullName>
                </value>
                <value>
                    <fullName>TPA/Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Opps_PO1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__PreContractingBillingPaperLongID__c</fullName>
        <description>Captures the Account Long ID of PreContracting Billing Paper lookup</description>
        <formula>LVGO__BillingPartner__r.LVGO__Account_ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreContractingBillingPaperLongID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__PreContractingContractPaperLongID__c</fullName>
        <formula>LVGO__Pre_Contracting_Contract_Paper__r.LVGO__Account_ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreContractingContractPaperLongID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Pre_Contracting_Contract_Paper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales will populate this field during the sales cycle with expected Contract Paper for the Opportunity. Additionally, the Contract Path field is also required before an Opp can be closed won.</description>
        <inlineHelpText>Sales will populate this field during the sales cycle with expected Contract Paper for the Opportunity. Additionally, the Contract Path field is also required before an Opp can be closed won.</inlineHelpText>
        <label>Pre-Contracting Contract Paper</label>
        <referenceTo>LVGO__Account__c</referenceTo>
        <relationshipLabel>Opportunities (Pre-Contracting Contract Paper)</relationshipLabel>
        <relationshipName>LVGO_Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Predicted_Total_3_yr_Cost_Savings_Scn_1__c</fullName>
        <formula>(ROUND(LVGO__Estimated_Enrolled_Population__c,0))*2828</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Total 3-yr Cost Savings-Scn 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Predicted_Total_3_yr_Cost_Savings_Scn_2__c</fullName>
        <formula>(ROUND(LVGO__Estimated_Enrolled_Population__c,0))*3624</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Total 3-yr Cost Savings-Scn 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Predicted_Total_3_yr_Cost_Savings_Scn_3__c</fullName>
        <formula>(ROUND(LVGO__Estimated_Enrolled_Population__c,0))*4477</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Predicted Total 3-yr Cost Savings-Scn 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Pricebook2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricebook</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>LGVO_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Probability__c</fullName>
        <label>Probability %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>LVGO__OpportunityLineItem__c.LVGO__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LVGO__Product_List__c</fullName>
        <description>Created by Rollup Helper</description>
        <label>Product List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Program_Count__c</fullName>
        <label>Program Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_Net_New_Diabetes_PPPM__c</fullName>
        <description>Livongo for Diabetes PPPM - Cost of Diabetes Supplies</description>
        <formula>LVGO__Livongo_for_Diabetes_PPPM__c -  LVGO__Cost_of_diabetes_testing_supplies__c</formula>
        <inlineHelpText>Livongo for Diabetes PPPM - Cost of Diabetes Supplies</inlineHelpText>
        <label>Projected Net New Diabetes PPPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_Net_New_Monthly_Cost__c</fullName>
        <description>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies</description>
        <formula>( LVGO__Livongo_for_Diabetes_PPPM__c -  LVGO__Cost_of_diabetes_testing_supplies__c ) * LVGO__Estimated_Enrolled_Population__c</formula>
        <inlineHelpText>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies</inlineHelpText>
        <label>Projected Net New Monthly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_Net_New_Yearly_Cost__c</fullName>
        <description>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies * 12</description>
        <formula>LVGO__Projected_Net_New_Monthly_Cost__c * 12</formula>
        <inlineHelpText>Net PPPM when taking PPPM - Cost of Diabetes Testing Supplies * 12</inlineHelpText>
        <label>Projected Net New Yearly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_ROI_3_Year_PPPM_Savings__c</fullName>
        <formula>LVGO__Projected_ROI_Annual_PPPM_Savings__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI 3=Year PPPM Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_ROI_Annual_PPPM_Savings__c</fullName>
        <formula>LVGO__Total_Year_1_Savings__c /  LVGO__Estimated_Enrolled_HTN_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI Annual PPPM Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_ROI_Scenario_1__c</fullName>
        <formula>((2783*0.39*0.91*0.8)+(4175*0.61*0.8)) / LVGO__Incremental_cost_of_Livongo_over_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI - Scenario 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_ROI_Scenario_2__c</fullName>
        <formula>((3595*0.39*0.91*0.8)+(5335*0.61*0.8)) / LVGO__Incremental_cost_of_Livongo_over_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI - Scenario 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_ROI_Scenario_3__c</fullName>
        <formula>((4407*0.39*0.91*0.8)+(6610*0.61*0.8)) / LVGO__Incremental_cost_of_Livongo_over_3_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ROI - Scenario 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__Projected_Total_DPP_Cases_Prevented__c</fullName>
        <formula>LVGO__DPP_Projected_Cases_Prevented_0_3__c + LVGO__DPP_Projected_Cases_Prevented_3_5__c + LVGO__DPP_Projected_Cases_Prevented_5_7__c + LVGO__DPP_Projected_Cases_Prevented_7_10__c + LVGO__DPP_Projected_Cases_Prevented_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Total DPP Cases Prevented</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Renewal_Total_Contract_Value__c</fullName>
        <formula>IF 
( ISPICKVAL(LVGO__Type__c,&quot;Renewal&quot;),
(LVGO__Livongo_for_Diabetes_PwDs__c * LVGO__Livongo_for_Diabetes_PPPM__c * LVGO__Livongo_for_Diabetes_Program_Term__c ) 
+ 
(LVGO__Livongo_for_Hypertension_PwHs__c * LVGO__Livongo_for_Hypertension_PPPM__c * LVGO__Livongo_for_Hypertension_Program_Term__c ) 
+ 
( LVGO__Livongo_for_Weight_Management_DP_PwOs__c * LVGO__Livongo_for_Weight_Management_DP_PPPM__c * LVGO__Livongo_for_WM_DP_Program_Term__c ), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Total Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Request_CIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creates a task and assigns to Client Implementation Director for purposes of requesting CIM to be assigned to Opportunity.</description>
        <inlineHelpText>Creates a task and assigns to Client Implementation Director for purposes of requesting CIM to be assigned to Opportunity.</inlineHelpText>
        <label>Request CIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Request_CSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once you are ready to request a CSM, check this box</description>
        <inlineHelpText>Once you are ready to request a CSM, check this box</inlineHelpText>
        <label>Request CIM / CSM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Revenue_Bucket__c</fullName>
        <label>Revenue Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USGH</fullName>
                </value>
                <value>
                    <fullName>HHS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__SLAs__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>SLAs</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__SOW__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>SOW</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Security_Requirements_Status__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>Security Requirements &amp; Status</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__Send_New_Client_Gift__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <formula>LVGO__Contract__r.LVGO__Send_New_Client_Gift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is in Sync with Send New Client Gift on Client Overview</inlineHelpText>
        <label>Send New Client Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Source_ID__c</fullName>
        <label>Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>ITH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__StageName__c</fullName>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Review/Negotiation</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>